# uSimpleWebServer

./: .gitignore  CMakeLists.txt  README.md
rpm/: build.spec
src/: favicon.h  jquery.h  main.cpp  webclienthdlr.cpp  webclienthdlr.h
